<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PurdueApp</string>
    <string name="map_window_label">Campus Map</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="time_place_tf">Time/place:</string>
    <string name="date_tf">Date:</string>
    <string name="tickets_tf">Tickets:</string>
    <string name="additional_tf">Additional Info:</string>
    <string name="hourly_button">Hourly</string>
    <string name="weekly_button">Weekly</string>
    <string name="radar_button">Radar</string>
    <string name="forecast_text_view">Forecast:</string>
    <string name="action_search">Search</string>
    <string name="Earhart">Earhart</string>
    <string name="Ford">Ford</string>
    <string name="Hillenbrand">Hillenbrand</string>
    <string name="Windsor">Windsor</string>
    <string name="Wiley">Wiley</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="Map">Map</string>
    <string name="Weather">Weather</string>
    <string name="Email">Email</string>
    <string name="CoRec">Co-Rec</string>
    <string name="DiningCourts">Dining Courts</string>
    <string name="Events">Events</string>
    <string name="Sports">Sports</string>
    <string name="weather_test_text_view">API Test:</string>
    <string name="test_weather_button">API Test</string>
<<<<<<< HEAD

    <string-array name="map_drawer_categories">
        <item>Academic Buildings</item>
        <item>Administrative Buildings</item>
        <item>Residence Halls</item>
        <item>Dining Courts</item>
        <item>Misc.</item>
    </string-array>

    <string name="title_activity_dining_courts_two">Dining Courts</string>

=======
    
>>>>>>> 6ac3bc3a6bb6fc768f9368c9c1b5a1dcb4cd75c8
</resources>