<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <Button
        android:id="@+id/MapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="left|center_vertical"
        android:text="@string/Map"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/WeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MapButton"
        android:gravity="left|center_vertical"
        android:text="@string/Weather"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/EmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/WeatherButton"
        android:gravity="left|center_vertical"
        android:text="@string/Email"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/CoRecButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EmailButton"
        android:gravity="left|center_vertical"
        android:text="@string/CoRec"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/DiningCourtsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/CoRecButton"
        android:gravity="left|center_vertical"
        android:text="@string/DiningCourts"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/EventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/DiningCourtsButton"
        android:gravity="left|center_vertical"
        android:text="@string/Events"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/SportsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/DiningCourtsButton"
        android:layout_marginTop="51dp"
        android:gravity="left|center_vertical"
        android:text="@string/Sports"
        style="?android:attr/borderlessButtonStyle" />
    
</RelativeLayout>

